--- a/prak.html
+++ b/prak.html
@@ -6,7 +6,7 @@
     <style>
     body
     {
-       background-image: url("inpras.jpg");
+       background-image: url("inpra.jpg");
        background-repeat=no-repeat;
        background-attachment: fixed;
        background-size: cover;
